--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Repositorio de historiografía del arte peruano</h1>
+        <h1>Repositorio de Historiografía del Arte Peruano</h1>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
     </div>
 </div>
