--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>Repositorio de</h1>
-        <h1>Historiografía del</h1>
+        <h1>Historiografía de</h1>
         <h1>Arte Peruano</h1>
     </div>
 </div>
@@ -37,23 +37,20 @@ layout: default
 
     <div class="row">
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by clonening source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and publsihed under your project's subdomain on `github.io`.
+            <h1 class="text-center"><i class="fa fa-file-text" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Resumen</h3>
+            <p>Cada ficha incluye un resumen que te facilita conocer de manera breve las ideas centrales de cada texto y una aproximación a los contenidos de los mismos. 
             </p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom by overwriting bootstrap sass variables for different color set, font options, etc.</p>
+            <h1 class="text-center"><i class="fa fa-list-ol" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Índice</h3>
+            <p>También encontraras el índice de cada libro o tesis, así este no lo incluya, lo cual te permite ver la estructura y los contenidos de la publicación.</p>
         </div>
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git based source control</h3>
-            <p>Leverege from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+            <h1 class="text-center"><i class="fa fa-commenting" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Comentario</h3
+            <p>Finalmente, nuestras fichas se complementan con un comentario que describe las características que singularizan la fuente .</p>
         </div>
     </div>
 
