--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@ layout: default
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-file-text" aria-hidden="true"></i></h1>
             <h3 class="text-center">Resumen</h3>
-            <p>Cada ficha incluye un resumen que te facilita conocer de manera breve las ideas centrales de cada texto y una aproximación a los contenidos de los mismos. 
+            <p align="center">Cada ficha incluye un resumen que te facilita conocer de manera breve las ideas centrales de cada texto y una aproximación a los contenidos de los mismos. 
             </p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-list-ol" aria-hidden="true"></i></h1>
             <h3 class="text-center">Índice</h3>
-            <p>También encontraras el índice de cada libro o tesis, así este no lo incluya, lo cual te permite ver la estructura y los contenidos de la publicación.</p>
+            <p align="center">También encontraras el índice de cada libro o tesis, así este no lo incluya, lo cual te permite ver la estructura y los contenidos de la publicación.</p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-commenting" aria-hidden="true"></i></h1>
             <h3 class="text-center">Comentario</h3
-            <p>Finalmente, nuestras fichas se complementan con un comentario que describe las características que singularizan la fuente .</p>
+            <p align="center">Finalmente, nuestras fichas se complementan con un comentario que describe las características que singularizan la fuente .</p>
         </div>
     </div>
 
