--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ layout: default
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-commenting" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Comentario</h3
-            <p align="center">Finalmente, nuestras fichas se complementan con un comentario que describe las características que singularizan la fuente .</p>
+            <h3 class="text-center">Comentario</h3>
+            <p align="center">Finalmente, nuestras fichas se complementan con un comentario que describe las características que singularizan la fuente.</p>
         </div>
     </div>
 
